--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ rcfx/php/.DS_Store
 ui/.DS_Store
 rcfx/js/component.js
 rcfx/js/gridoption.js
+rcfx/dashboard1.unmin.php
+rcfx/php/component.unmin.php
